style.css
* {
    border: 1px solid red ;
    box-sizing: border-box;
}

body {
    height: 100vh;
    width: 100vw;
}

.grid-container {
    display: grid;
    height: 100vh;
    width: 100vw;
    grid-template-rows: 1fr 3fr;
    grid-template-columns: 1fr 4fr;
}

aside {
    background-color: #00a7ff;
    grid-row: 1 / 3;
    grid-column: 1 / 2;

    display: grid;
    grid-template-columns: 1fr;
    grid-template-rows: 1fr 3fr 3fr;

    align-content: start;

    row-gap: 20px;

    color: white;
}

aside h1 {

    font-size: 2rem;
}

ul {
    list-style-type: none;
    margin: 0;
    padding: 0;

    font-size: 1.8rem;
}

aside li {
    margin: 20px;
}

.side-header-icon {
    width: 50px;
    margin-right: 20px;
    margin-top: 30px;
}

.side-icon {
    width: 30px;
    margin-right: 20px;
}



header {
    background-color: azure;
    grid-row: 1 / 2;
    grid-column: 2 / 3;

    display: grid;
    grid-template-rows: 1fr 1fr;
    grid-template-columns: 2fr 1fr;
}

.header-searchbar {
    display: grid;

    grid-template-columns: 2fr 1fr;
    grid-column: 1 / 3;

}

.header-user-info {

}

.header-buttons {

}

.header-icon-small {
    width: 20px;

}

.header-icon-large {
    width: 40px;    
}

main {
    background-color: grey;
    grid-row: 2 / 3;
    grid-column: 2 / 3;
}

